--- a/style.css
+++ b/style.css
@@ -4,10 +4,10 @@
 
 .banner {
     background-image: url('./images/banner/banner2.png');
-    eight: 100vh;
+
     background-repeat: no-repeat;
     background-size: cover;
-align-items: right;
+    align-items: right;
 }
 
 .banner-title {
@@ -39,19 +39,72 @@ align-items: right;
     cursor: pointer;
 
 }
-.btn:hover{color: black;}
 
+.btn:hover {
+    color: black;
+}
 
-
-
-
-
-
-
-
-
-
-
-
+/* main section */
+.main-section {
+    padding: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 
 }
+
+
+.main-img-bg {
+    width: 527.929px;
+    height: 527.929px;
+    border-radius: 527.929px;
+    background: rgba(241, 91, 34, 0.20);
+
+}
+
+.main-head2 {
+    color: #151414;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 700;
+    margin-bottom: 50px;
+
+}
+
+.main-description {
+    color: var(--dark-02, #444343);
+    font-family: Work Sans;
+    font-size: 26px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 26px;
+}
+.checkbox{
+    padding: 20px;
+    color: var(--dark-02, #444343);
+font-family: Work Sans;
+font-size: 18px;
+font-style: normal;
+font-weight: 400;
+line-height: 26px;
+list-style-type: none;
+
+}
+.lists{
+    padding-bottom: 12px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
