--- a/style.css
+++ b/style.css
@@ -79,33 +79,60 @@
     font-weight: 400;
     line-height: 26px;
 }
-.checkbox{
+
+.checkbox {
     padding: 20px;
     color: var(--dark-02, #444343);
-font-family: Work Sans;
-font-size: 18px;
-font-style: normal;
-font-weight: 400;
-line-height: 26px;
-list-style-type: none;
+    font-family: Work Sans;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 26px;
+    list-style-type: none;
 
 }
-.lists{
+
+.lists {
     padding-bottom: 12px;
 }
 
+.my-plans {
+    padding-top: 100px;
+    text-align: center;
+}
 
+.plans-title {
+    padding-bottom: 50px;
+    color: var(--dark-01, #151414);
+    font-family: Work Sans;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
 
+.plans-head {
+    color: var(--dark-01, #151414);
+    text-align: center;
+    font-family: Work Sans;
+    font-size: 30px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    padding-bottom: 10px;
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
+.plans-p {
+    color: var(--dark-03, #737272);
+    text-align: center;
+    font-family: Work Sans;
+    font-size: 25px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+}
+.plans-logo{
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
