--- a/style.css
+++ b/style.css
@@ -95,9 +95,10 @@
 .lists {
     padding-bottom: 12px;
 }
-.plans-section{
+
+.plans-section {
     background-color: white;
-    height: 100vh;
+
 }
 
 .my-plans {
@@ -143,30 +144,29 @@
 }
 
 .plans-banner {
-   
+
     border-radius: 0px;
-    background-image: url(./images/watch.png);
-    
+    background-image: linear-gradient(90deg, #F15B22 0%, rgba(241, 91, 34, 0.00) 100%),url(./images/watch.png);
     border-radius: none;
     width: 1140px;
     height: 300px;
-    margin-left: 400px;
-    margin-top: 100px;
+    /* margin-left: 400px;
+    margin-top: 100px; */
     background-repeat: no-repeat;
-    
-    
-    
+    margin: auto;
+    margin-top: 100px;
 }
-.plans-banner-title
-{
+
+.plans-banner-title {
     color: #FFF;
-font-family: Work Sans;
-font-size: 30px;
-font-style: normal;
-font-weight: 700;
-line-height: normal;
+    font-family: Work Sans;
+    font-size: 30px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
 }
-.btn-2{
+
+.btn-2 {
     border: none;
     background: #ffffff;
     color: orange;
@@ -185,7 +185,7 @@ line-height: normal;
     color: black;
 }
 
-.plans-banner-title{
+.plans-banner-title {
     padding-left: 100px;
     padding-top: 55px;
 }
