--- a/style.css
+++ b/style.css
@@ -189,3 +189,84 @@
     padding-left: 100px;
     padding-top: 55px;
 }
+/* footer */
+footer{
+   margin-top: 100px;
+   padding: 50px;
+   display: flex;
+    
+    background-color: black; 
+}
+.footer-title{
+    color: #F8F8F8;
+font-family: Work Sans;
+font-size: 45px;
+font-style: normal;
+font-weight: 700;
+line-height: normal;
+margin: 100px 100px 30px 0px; 
+
+}
+.footer-description{
+    color: #FFF;
+font-family: Work Sans;
+font-size: 16px;
+font-style: normal;
+font-weight: 400;
+line-height: 26px;
+}
+.email{
+    color: #FFF;
+font-family: Work Sans;
+font-size: 16px;
+font-style: normal;
+font-weight: 400;
+line-height: 26px;
+padding-bottom: 10px;
+padding-top: 10px;
+}
+.phone{
+    color: #FFF;
+font-family: Work Sans;
+font-size: 16px;
+font-style: normal;
+font-weight: 400;
+line-height: 26px;
+padding-bottom: 10px;
+}
+.footer-column{
+    padding-left: 100px;
+}
+.social-links{
+    margin-top: 10px;
+}
+.fb{
+    margin-right: 15px;
+}
+.yt{
+    margin-left: 15px;
+}
+.section-title2{
+    color: #FFF;
+font-family: Work Sans;
+font-size: 25px;
+font-style: normal;
+font-weight: 600;
+line-height: normal;
+padding-top: 100px;
+padding-left: 1046px;
+padding-right: 431px;
+}
+.main-footer{
+  display: flex;
+}
+.btn3{
+    color: #F15B22;
+font-family: Inter;
+font-size: 20px;
+font-style: normal;
+font-weight: 600;
+line-height: normal;
+border-radius: 8px;
+background: #FFF;
+}
