footer almost done

--- a/style.css
+++ b/style.css
@@ -193,7 +193,7 @@
 footer{
    margin-top: 100px;
    padding: 50px;
-   display: flex;
+ 
     
     background-color: black; 
 }
@@ -269,4 +269,31 @@ font-weight: 600;
 line-height: normal;
 border-radius: 8px;
 background: #FFF;
+width: 170.106px;
+height: 64px;
+flex-shrink: 0;
+margin-top: 0px;
+margin-left: 1046px;
+margin-bottom: 242px;
+margin-right: 383px;
+}
+.btn3:hover{
+    color: black;
+}
+.mail-box{
+    color: var(--dark-07, #F3F3F3);
+font-family: Work Sans;
+font-size: 18px;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
+width: 225px;
+height: 54px;
+flex-shrink: 0;
+border-radius: 8px;
+border: 1px solid #FFF;
+padding-left: 10px;
+margin-left: 1046px;
+margin-top: 10px;
+
 }
