--- a/style.css
+++ b/style.css
@@ -292,7 +292,7 @@ height: 54px;
 flex-shrink: 0;
 border-radius: 8px;
 border: 1px solid #FFF;
-
+color: black;
 margin-left: 1046px;
 margin-top: 31px;
 margin-bottom: 16px;
